Update src/main/java/likelion/festival/service/ContentService.java
Co-authored-by: Seochan Moon <moonsc1110@gmail.com>